fixed the errors I had. keep textarea together not on seperate lines

--- a/templates/individual.html
+++ b/templates/individual.html
@@ -6,7 +6,7 @@
 
     <div>
             <h3>{{inv_blog.title}}</h3>
-            <p>{{inv_blog.body}}</p>
+            <div>{{inv_blog.body}}</div>
     </div>
     
 
