--- a/templates/blog.html
+++ b/templates/blog.html
@@ -8,7 +8,7 @@
     <div>
         {% for blog in blogs %}
         <h2><a href="./blog?id={{blog.id}}">{{blog.title}}</a></h2>
-        <p>{{blog.body}}</p>
+        <div>{{blog.body}}</div>
         <hr>
         {% endfor %}
     </div>
