--- a/templates/base.html
+++ b/templates/base.html
@@ -8,7 +8,15 @@
 
         <div>
             <a href='/blog'>Main Blog Page</a>
-            <a href='/newpost'>Add a Blog Entry</a>
+            <br>
+            <a href='/index'>All Users</a>
+            <br>
+            <a href='/newpost'>New Entry</a> 
+            <br>
+            <br>
+            <a href='/login'>Login </a>
+            <br>
+            <a href='/logout'>Log Out </a>
         </div>
 
         {% block content %}
